--- a/src/main/resources/templates/evento/eventoFSCShow.html
+++ b/src/main/resources/templates/evento/eventoFSCShow.html
@@ -184,8 +184,7 @@
 					</div>
 					<div class="item form-group" th:if="${eventoWrapperShow.evento.tipologiaEventoFSC != null and 
 					eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).ATTIVITA_DI_RICERCA and 
-					eventoWrapperShow.evento.versione != null and 
-					eventoWrapperShow.evento.versione == T(it.tredi.ecm.dao.enumlist.EventoVersioneEnum).DUE_DAL_2018}">
+					@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span class="label-show" th:text="#{label.eventofsc_tipologiaSperimentazione}">Tipologia sperimentazione</span>
 						</label>
@@ -292,10 +291,9 @@
 												<th th:text="#{label.qualifica}">Qualifica</th>
 												<th th:text="#{label.cv}">CV</th>
 												<th 
-													th:if="${eventoWrapperShow.evento.versione != null and 
-													eventoWrapperShow.evento.versione == T(it.tredi.ecm.dao.enumlist.EventoVersioneEnum).DUE_DAL_2018}" th:text="#{label.identificativo_persona_evento}">Identificativo Responsabile</th>
+													th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}" th:text="#{label.identificativo_persona_evento}">Identificativo Responsabile</th>
 												<th 
-												th:if="${eventoWrapperShow.evento.versione != null and eventoWrapperShow.evento.versione == T(it.tredi.ecm.dao.enumlist.EventoVersioneEnum).DUE_DAL_2018}" 
+												th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}" 
 												th:text="#{label.svolge_attivita_docenza}">Svolge attivita di docenza</th>
 											</tr>
 										</thead>
@@ -310,14 +308,12 @@
 													<span th:unless="${persona.anagrafica.cv?.id}" th:text="#{label.nessun_cv}"></span>
 												</td>
 												<td 
-													th:if="${eventoWrapperShow.evento.versione != null and 
-													eventoWrapperShow.evento.versione == T(it.tredi.ecm.dao.enumlist.EventoVersioneEnum).DUE_DAL_2018 and 
+													th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento) and 
 													persona != null}" 
 													th:text="${persona.identificativoPersonaRuoloEvento?.nome}">
 												</td>
 												<td 
-													th:if="${eventoWrapperShow.evento.versione != null and 
-													eventoWrapperShow.evento.versione == T(it.tredi.ecm.dao.enumlist.EventoVersioneEnum).DUE_DAL_2018 and 
+													th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento) and 
 													persona != null}" 
 													th:text="${persona.svolgeAttivitaDiDocenza} ? #{label.sì} : #{label.no}">
 												</td>
@@ -333,7 +329,7 @@
 					</div>
 					
 					<!-- ESPERTI -->
-					<div class="item form-group" th:if="${eventoWrapperShow.esperti != null and !#sets.isEmpty(eventoWrapperShow.esperti) and eventoWrapperShow.evento.versione == T(it.tredi.ecm.dao.enumlist.EventoVersioneEnum).DUE_DAL_2018}">
+					<div class="item form-group" th:if="${eventoWrapperShow.esperti != null and !#sets.isEmpty(eventoWrapperShow.esperti) and @eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span class="label-show" th:text="#{label.esperti}">Esperti</span>
 						</label>
@@ -373,7 +369,7 @@
 					</div>
 					
 					<!-- INVESTIGATORI -->
-					<div class="item form-group" th:if="${eventoWrapperShow.investigatori != null and !#sets.isEmpty(eventoWrapperShow.investigatori) and eventoWrapperShow.evento.versione == T(it.tredi.ecm.dao.enumlist.EventoVersioneEnum).DUE_DAL_2018}">
+					<div class="item form-group" th:if="${eventoWrapperShow.investigatori != null and !#sets.isEmpty(eventoWrapperShow.investigatori) and @eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span class="label-show" th:text="#{label.investigatori}">Esperti</span>
 						</label>
