--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -2473,9 +2473,9 @@
 				function setAttivitaSalutiIntroduttivi() {
 					var versione = getVersione();
 					if (versione === 2) {
-						$("#add-attivitaSalutiIntroduttivi").show();
+						$(".attivitaSalutiIntroduttivi").show();
 					} else {
-						$("#add-attivitaSalutiIntroduttivi").hide();
+						$(".attivitaSalutiIntroduttivi").hide();
 					}
 				}
 				
