--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -2275,6 +2275,7 @@
 							$("#container-titlePausa").hide();
 							$("#container-titleValutazioneApprendimento").hide();
 							$("#container-titleRegistrazionePartecipanti").hide();
+							$("#container-titleSalutiIntroduttivi").hide();
 							$("#container-titleNoPausa").show();
 							$("#container-argomento").show();
 							$("#container-docente").show();
